# tideth

./: .gitignore  Cargo.toml  FILE_TEMPLATE  README.md  hardhat.config.js  package.json
.github/workflows/: publish-draft-release.yml
contracts/: Circle.sol  ERC20.sol  FeeCoin.sol  IRouter.sol  Router.sol  RustCoin.sol  SafeOwnable.sol  Tether.sol
examples/: assets.rs  deploy.rs  deploy_safe.rs  deposit.rs  keygen.rs  log_router_owner.rs  transfer_ownership.rs
src/: config.rs  erc20.rs  error.rs  lib.rs  router.rs  safe.rs  utils.rs
tests/: erc20_test.rs  eth_strong_test.rs  full_router_test.rs  log_test.rs  router_safe_test.rs  stronghold_safe_test.rs
