[package]
name = "tideth"
version = "0.0.1"
publish = false
edition = "2018"

[dependencies]
ethcontract = { git = "https://github.com/tidelabs/ethcontract", branch = "dev" }
ethcontract-common = { git = "https://github.com/tidelabs/ethcontract", branch = "dev" }
futures = "0.3"
tokio = { version = "1.18", features = ["macros"] }
hex = "0.4.3"
serde_json = "1.0"
libsecp256k1 = { version = "0.5", default-features = false, features = [ "hmac", "static-context" ] }
tiny-keccak = { version = "2.0", features = [ "keccak" ] }
thiserror = "1.0.25"
rustc-hex = "2.1.0"
config = "0.11.0"
serde = { version = "1.0.101", features = ["derive"] }
log = "0.4"

[dev-dependencies]
dotenv = "0.15.0"
rand = "0.8.4"
iota_stronghold = { git = "https://github.com/tidelabs/stronghold.rs", branch = "dev", features = ["webthree"] }
# iota_stronghold = { git = "https://github.com/tidelabs/stronghold.rs", branch = "dev" }
anyhow = "1.0"
